# Gravity2Gravity

./: CMakeLists.txt  clock-coords.txt
src/: Optimization.h  RandomHelper.h  Ransac.hh  SelectMatchedPoints.cc  SelectMatchedPoints.h  common.cc  common.h  math.hh  planargrav.cc  pnpgrav.cc  pose-other.cc  pose-other.h  poseocv.cc  poseocv.h  synth2d.cc  synth2d.h  synth3d.cc  synth3d.h  two_point_pose_partial_rotation.cc
test-3d/: far-left-rot.wmatch  far-left.wmatch  far-left2.wmatch  far-left3.wmatch  far-right-rot.wmatch  far-right.wmatch  middle-left-rot.wmatch  middle-left.wmatch  middle-right-rot.wmatch  middle-right.wmatch  middle-up.wmatch  near-left.wmatch  near-right.wmatch  near-up-rot.wmatch  results.sh  test2.wmatch
test-3d/images/far/: right-rot.ply  right-rot2.ply  right.ply  right2.ply  right2.yaml
test-3d/images/middle/: centre-rot.ply  centre-rot.yaml  centre.ply  centre.yaml  left-rot.ply  left-rot.yaml  left-rot2.yaml  left.ply  right-rot.ply  right-rot.yaml  right-rot2.ply  right-rot2.yaml  right2.ply  right2.yaml  up.yaml
test-3d/images/near/: centre-rot.ply  centre-rot.yaml  centre.ply  left.ply  right-rot.ply  right-rot2.yaml  right.ply  up-rot.ply
test-planar/: far-left-rot.match  far-left-rot.wmatch  far-left-rot_5.match  far-left.match  far-left.wmatch  far-left_5.match  far-right-rot.match  far-right-rot.wmatch  far-right-rot_5.match  far-right.match  far-right_5.match  middle-left-rot.match  middle-left-rot.wmatch  middle-left-rot_5.match  middle-left.match  middle-left.wmatch  middle-left_5.match  middle-right-rot.match  middle-right-rot.wmatch  middle-right-rot_5.match  middle-right.match  middle-right.wmatch  middle-right_5.match  middle-up.match  middle-up.wmatch  middle-up_5.match  near-left-rot.match  near-left-rot.wmatch  near-left-rot_5.match  near-left.match  near-left_5.match  near-right-rot.match  near-right-rot.wmatch  near-right-rot_5.match  near-right.match  near-right_5.match  ref.match  ref.wmatch  results.sh  xx.wmatch
test-planar/images/far/: left-rot.ply  left-rot.yaml  left.ply  left.yaml  right-rot.yaml  right-rot2.yaml  right.yaml
test-planar/images/middle/: left-rot2.ply  left.yaml  right.ply  right.yaml  up.ply
test-planar/images/near/: centre.yaml  left-rot.ply  left-rot.yaml  left.yaml  right-rot.yaml  right-rot2.ply  right.yaml  up-rot.yaml
theia-RANSAC/: create_and_initialize_ransac_variant.h  estimator.h  exhaustive_ransac.h  exhaustive_sampler.cc  exhaustive_sampler.h  inlier_support.h  mle_quality_measurement.h  prosac.h  prosac_sampler.cc  prosac_sampler.h  random.cc  random_sampler.cc  random_sampler.h  ransac.h  sample_consensus_estimator.h  sampler.h
